build: add maven-compiler-plugin 3.12.1